# polimiphd-RecSysFrameworkExtensions

./: .gitignore  Dockerfile  README.md  pyproject.toml
recsys_framework_extensions/: __init__.py
recsys_framework_extensions/dask/: __init__.py
recsys_framework_extensions/data/: dataset.py  features.py  io.py  mixins.py  reader.py  sparse.py  splitter.py  validate.py
recsys_framework_extensions/decorators/: __init__.py
recsys_framework_extensions/email/: gmail.py
recsys_framework_extensions/evaluation/: Evaluator.py  __init__.py  loops.py  metrics.py  statistics_tests.py
recsys_framework_extensions/evaluation/metric/: nb_impl.py  py_impl.py
recsys_framework_extensions/hashing/: __init__.py  mixins.py
recsys_framework_extensions/http/: __init__.py
recsys_framework_extensions/hyper_parameter_search/: __init__.py
recsys_framework_extensions/logging/: __init__.py
recsys_framework_extensions/optimizer/: __init__.py
recsys_framework_extensions/pandas/: __init__.py
recsys_framework_extensions/plotting/: __init__.py  notebook.py
recsys_framework_extensions/recommenders/: base.py  mixins.py  rank.py
recsys_framework_extensions/recommenders/graph_based/: light_gcn.py  p3_alpha.py  rp3_beta.py
recsys_framework_extensions/recommenders/mf/: mf_bpr.py
recsys_framework_extensions/recommenders/mf/funksvd/: __init__.py  recommender.py  recommender_julia.py  training.py
recsys_framework_extensions/recommenders/mf/funksvd/cython/: mf_funk_svd.pyx
recsys_framework_extensions/recommenders/mf/funksvd/numba/: mf_funk_svd.py  mf_funk_svd.pyx  mf_funk_svd_class.py  mf_funk_svd_namedtuples.py  mf_funk_svd_v2.py
recsys_framework_extensions/recommenders/slim/: slim_bpr.py  slim_elasticnet.py
recsys_framework_extensions/results/: __init__.py
recsys_framework_extensions/sampling/: scipy_sparse.py  sparse.py
recsys_framework_extensions/sparse/: utils.py
tests/: conftest.py
tests/evaluation/: test_evaluator.py  test_statistics_tests.py
tests/evaluation/metric/: test_implementations.py
tests/recommenders/graph_based/: test_p3_alpha.py  test_rp3_beta.py
tests/recommenders/mf/funksvd/: test_recommenders.py  test_recommenders_julia.py  test_training.py
tests/recommenders/mf/funksvd/numba/: test_numba_performance.py
tests/sampling/: test_sparse.py
