[logs]
dir_name = "logs"
file_name = "recsys_framework_extensions.log"
formatter = "%(process)d|%(asctime)s|%(levelname)s|%(module)s|%(funcName)s|%(lineno)d|%(message)s"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.poetry]
name = "recsys-framework-extensions"
version = "0.2.0"
description = ""
authors = ["Fernando Benjamín PÉREZ MAURERA <fperezmaurera@gmail.com>"]
packages = [
    { include = "recsys_framework_extensions" }, # Include the recsys_framework_extensions folder as a package.
]
exclude = [
    { path = "build/*" },
]

[tool.poetry.dependencies]
python = "~3.9"
recsys-framework-public = { path = "../RecSysFramework_public/", develop = false }  # Use this when publishing the repo.
attrs = "^21.4.0"
dask = {extras = ["complete"], version = "^2022.7.0"}
holoviews = "^1.15.0"
pyarrow = "^8.0.0"
seaborn = "^0.11.2"
statsmodels = "^0.13.2"
toml = "^0.10.2"
numba = "^0.55.2"
imageio = "^2.19.5"
pygifsicle = "^1.0.5"
google-api-python-client = {version = "^2.54.0", optional = true}
google-auth-httplib2 = {version = "^0.1.0", optional = true}
google-auth-oauthlib = {version = "0.4.6", optional = true}

[tool.poetry.extras]
email-gmail = ["google-api-python-client", "google-auth-httplib2", "google-auth-oauthlib"]

[tool.poetry.dev-dependencies]
mypy = "^0.971"
types-toml = "^0.10.8"
pytest = "^7.1.2"
Faker = "^13.15.0"

[tool.poetry.build]
generate-setup-file = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
