[tool.logging]
dir_logs = ".logs"
filename_logs = "recsys_framework_extensions.log"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.poetry]
name = "recsys-framework-extensions"
version = "0.3.1"
description = ""
authors = ["Fernando Benjamín PÉREZ MAURERA <fperezmaurera@gmail.com>"]
packages = [
    { include = "recsys_framework_extensions" }, # Include the recsys_framework_extensions folder as a package.
]
exclude = [
    { path = "build/*" },
]

[tool.poetry.dependencies]
python = "~3.10"
recsys-framework-public = { path = "../RecSysFramework_public/", develop = false }  # Use this when publishing the repo.
attrs = "^23.1.0"
dask = {extras = ["complete"], version = "^2023.6.1"}
distributed = "^2023.6.1"
numba = "^0.57.1"
pyarrow = "^12.0.1"
statsmodels = "^0.14.0"
sparse = "^0.14.0"
toml = "^0.10.2"
holoviews = "^1.16.2"
seaborn = "^0.12.2"
imageio = "^2.31.1"
pygifsicle = "^1.0.7"
google-api-python-client = {version = "^2.91.0", optional = true}
google-auth-httplib2 = {version = "^0.1.0", optional = true}
google-auth-oauthlib = {version = "^1.0.0", optional = true}

[tool.poetry.extras]
email-gmail = ["google-api-python-client", "google-auth-httplib2", "google-auth-oauthlib"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
types-toml = "^0.10.8.6"
pytest = "^7.4.0"
Faker = "^18.11.2"
black = {extras = ["d"], version = "^23.7.0"}

[tool.poetry.build]
generate-setup-file = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
